20. catches overlaps faster

--- a/village/interactiveOnly.ipynb
+++ b/village/interactiveOnly.ipynb
@@ -306,14 +306,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75a5cca1",
+   "id": "e51ad18a",
    "metadata": {},
    "outputs": [],
    "source": [
     "#- create pseudo-3D interactive visualisation\n",
     "\n",
     "#- absolute path\n",
-    "path = 'full/path/without/filename/result'\n",
+    "path = '/Users/adriankriger/Documents/osm_LoD1_3DCityModel/geo3DLite_qgisGitHubRepoTest/result'\n",
     "\n",
     "city3D.create_3Dviz(\n",
     "    path, \n",
@@ -724,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0d9c0a2",
+   "id": "29e69313",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,29 +737,37 @@
     "geoms = gdf2[\"geometry\"].tolist()\n",
     "tree = STRtree(geoms)\n",
     "# Find overlapping pairs\n",
-    "pairs = []\n",
-    "for i, geom in enumerate(geoms):\n",
+    "#pairs = []\n",
+    "#for i, geom in enumerate(geoms):\n",
     "    # query returns candidates that intersect envelope\n",
-    "    candidates = tree.query(geom)\n",
-    "    for c in candidates:\n",
+    "#    candidates = tree.query(geom)\n",
+    "#    for c in candidates:\n",
     "        # find index by identity in the original geoms list\n",
-    "        try:\n",
-    "            j = next(idx for idx, g in enumerate(geoms) if g is c)\n",
-    "        except StopIteration:\n",
-    "            continue  # skip if candidate is not found\n",
-    "        if i != j and geom.overlaps(c):\n",
-    "            pairs.append((i, j))\n",
+    "#        try:\n",
+    "#            j = next(idx for idx, g in enumerate(geoms) if g is c)\n",
+    "#        except StopIteration:\n",
+    "#            continue  # skip if candidate is not found\n",
+    "#        if i != j and geom.overlaps(c):\n",
+    "#            pairs.append((i, j))\n",
     "\n",
-    "joined = pd.DataFrame(pairs, columns=[\"index_left\", \"index_right\"])\n",
+    "#joined = pd.DataFrame(pairs, columns=[\"index_left\", \"index_right\"])\n",
     "\n",
     "#- remove self matches and select overlapping geometries\n",
-    "left_idx = joined[\"index_left\"]\n",
-    "right_idx = joined[\"index_right\"]\n",
-    "mask = left_idx != right_idx\n",
-    "overlap_idx = left_idx[mask].unique()\n",
+    "#left_idx = joined[\"index_left\"]\n",
+    "#right_idx = joined[\"index_right\"]\n",
+    "#mask = left_idx != right_idx\n",
+    "#overlap_idx = left_idx[mask].unique()\n",
     "\n",
-    "crossing_buildings = gdf2.loc[overlap_idx].reset_index(drop=True)\n",
+    "#- Query the tree for overlaps\n",
+    "# This returns two arrays: 'i' (index in geoms we are checking) and 'j' (index in the tree it overlapped with)\n",
+    "# Vectorized query: fastest way to find overlaps\n",
+    "i, j = tree.query(geoms, predicate=\"overlaps\")\n",
     "\n",
+    "#- filter self-matches and get unique indices of all involved buildings\n",
+    "mask = i != j\n",
+    "overlap_idx = set(i[mask])\n",
+    "\n",
+    "crossing_buildings = gdf2.iloc[list(overlap_idx)].reset_index(drop=True)\n",
     "\n",
     "end = time.time()\n",
     "print(\"Runtime:\", timedelta(seconds=end - start))"
@@ -768,7 +776,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10bec0b6",
+   "id": "02e1d1f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -834,7 +842,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "122e6540",
+   "id": "9f88ba50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -844,7 +852,7 @@
     "iface.mapCanvas().refresh()\n",
     "\n",
     "# 2. Save the image (The simple way)\n",
-    "image_path = 'full/path/with/filename/data/topology.png'\n",
+    "image_path = '/Users/adriankriger/Documents/osm_LoD1_3DCityModel/geo3DLite_qgisGitHubRepoTest/data/topology.png'\n",
     "iface.mapCanvas().saveAsImage(image_path)"
    ]
   },
@@ -1143,7 +1151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "067ba9df",
+   "id": "e42cf9a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1439,7 +1447,7 @@
     "# 3. Materialize to memory (makes it a proper 'feature' layer)\n",
     "final_blds = QgsProject.instance().addMapLayer(new_blds_layer.materialize(QgsFeatureRequest()))\n",
     "\n",
-    "path = os.path.join('full/path/without/filename/data', 'geo3D.gpkg')\n",
+    "path = os.path.join('/Users/adriankriger/Documents/osm_LoD1_3DCityModel/geo3DLite_qgisGitHubRepoTest/data', 'geo3D.gpkg')\n",
     "#- will save each layer to a geopackage. rejoject to utm if necessary\n",
     "city3D.save_to_geopackage(path, blds2.crs.to_string())"
    ]
